[package]
name = "ecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.28.0", features = ["full"] }
prettytable = "0.10.0"
clap = { version="4.1.11", features = ["cargo"] }
csv = "1.2.1"
thiserror = "1.0.40"
colored = "2.0.0"
dirs = "5.0.1"
dialoguer = "0.10.4"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
